	* prompt.c (get_prompt_string) - Universally handle help key when is disabled.  Fixes Savannah
	  bug 28117 by David Lawrence Ramsey <pooka109@gmail.com>.
	* chars.c, files.c: Add junk vars to silence the compiler.  Sigh.

2009-11-29 David Lawrence Ramsey <pooka109@gmail.com>
	* Change several *chars to const char, additional cleanups and casts to make compilers happier.

2009-11-27 Chris Allegretta <chrisa@asty.org>
	* nano.c (do_suspend): Don't clear the screen but do move the cursor down to the last line
	  first in an effort to not corrupt the screen, which contradicts Pico but is consistent
	  with almost all other text editors.  Fixes Savannah bug 28110/Debian bug 460510
	  reported by Tim Connors <reportbug@rather.puzzling.org>.
	* doc/dyntax/makefile.nanorc - Sample Makefile highlighting based on wiki.linuxhelp.net version.

2009-11-26 Chris Allegretta <chrisa@asty.org>
	* winio.c (edit_scroll): Adjust for long lines when scrolling.
	* rcfile.c (parse_rcfile), initialize size argument to getline(), fixes crash on FreeBSD 
	  reported by Eitan Adler <eitanadlerlist@gmail.com>.

2009-11-26 Jordi Mallach <jordi@gnu.org>
	* doc/man/*: Update all man pages to escape unescapred hyphens.

2009-11-24 Chris Allegretta <chrisa@asty.org>
	* move.c (do_page_up, do_page_down): Make these functions work better with soft
	  line wrapping.
	* winio.c (compute_maxrows): Make maxrows calculation more accurate when all lines are > COLS.

2009-11-22 Chris Allegretta <chrisa@asty.org>
	* nano.c (main): Allow edit_refresh_needed to take effect when using --enable-tiny
	  (fixes Savannah bug 28076 reported by David Lawrence Ramsey).

2009-11-22 David Lawrence Ramsey <pooka109@gmail.com>
	* nano.c (move_to_filestruct): Fix bug 71 (cut at top of line recenters)
	* Fix compilation with --enable-tiny

2009-11-22 Mike Frysinger <vapier@gentoo.org>
	* doc/syntax/gentoo.nanorc: Tweak comment highlighting.

GNU nano 2.1.99pre2 - 2009.11.21
2009-11-21 Chris Allegretta <chrisa@asty.org>